<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Email del jugador en la esquina superior izquierda -->
    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:padding="8dp"
        android:text="@string/EmailJugador" />

    <!-- Saldo del jugador en la esquina superior derecha -->
    <TextView
        android:id="@+id/saldoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:padding="8dp"
        android:text="@string/Saldo" />

    <!-- Título "Historial" más grande y centrado en la parte superior -->
    <TextView
        android:id="@+id/tituloTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailTextView"
        android:layout_centerHorizontal="true"
        android:padding="16dp"
        android:text="@string/Historial"
        android:textSize="24sp" />

    <!-- Listbox para mostrar los datos del historial -->
    <ListView
        android:id="@+id/historialListView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tituloTextView"
        android:layout_marginTop="8dp"
        android:layout_above="@id/botonCerrar" />

    <!-- Botón para terminar la aplicación -->
    <Button
        android:id="@+id/botonCerrar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:text="@string/IrCalendario" />

    <!-- Nuevo botón para enviar datos al multijugador -->
    <Button
        android:id="@+id/botonEnviarDatosMultijugador"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@id/botonCerrar"
        android:layout_alignBaseline="@id/botonCerrar"
        android:text="Multijugador" />

</RelativeLayout>
